<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".UserProfileFragment">


    <TextView
        android:id="@+id/profileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/your_profile"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:gravity="start"

                android:text="@string/email"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/firstNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center"
                android:labelFor="@id/firstNameEditText"
                android:text="@string/first_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lastNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center"
                android:labelFor="@id/lastNameEditText"
                android:text="Last name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/genderTextView"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center"
                android:labelFor="@id/genderSpinner"
                android:text="Gender"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/birthdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center"
                android:labelFor="@id/birthdayEditText"
                android:text="Birthday"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/phoneNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center"
                android:labelFor="@id/phoneNumberEditText"
                android:text="Phone number"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/countryTextView"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center"
                android:labelFor="@id/countryEditText"
                android:text="Country"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/favouriteGenreTextView"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center"
                android:labelFor="@id/favouriteGenreEditText"
                android:text="Favourite genre"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/favouriteDirectorTextView"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center"
                android:labelFor="@id/favouriteDirectorEditText"
                android:text="Favourite director"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/bioTextView"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center"
                android:labelFor="@id/favouriteDirectorEditText"
                android:text="Bio"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp">

            <TextView
                android:id="@+id/emailValueTextView"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="d.krumkachev@gmail.com"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints="name"
                android:inputType="textPersonName"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints="name"
                android:inputType="textPersonName"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:spinnerMode="dropdown"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/birthdayEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints="phone"
                android:inputType="phone"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/countryEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:importantForAutofill="no"
                android:inputType="none"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/favouriteGenreEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/favouriteDirectorEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/bioEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="Save"
        android:textSize="16sp" />


    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="Log out"
        android:textSize="16sp" />
</LinearLayout>